feat: finished create tree endpoint with open api spec + addition like validator etc
