# api.yml
@@ -58,11 +58,15 @@ paths:
                   type: integer
                   minimum: 1
                   maximum: 50000
+                  x-oapi-codegen-extra-tags:
+                    validate: "required,min=1,max=50000"
                   example: 10
                 width:
                   type: integer
                   minimum: 1
                   maximum: 50000
+                  x-oapi-codegen-extra-tags:
+                    validate: "required,min=1,max=50000"
                   example: 5
       responses:
         '201':
@@ -88,6 +92,105 @@ paths:
                   error:
                     type: string
                     example: Invalid input
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Oops, something wrong with the server. Please try again later
+  /estate/{estate_id}/tree:
+    post:
+      summary: Create a tree for specific estate ID
+      operationId: createTree
+      parameters:
+        - name: estate_id
+          in: path
+          required: true
+          description: The Estate ID to refer which the new tree belongs to
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        description: JSON payload to create a new estate
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - x
+                - y
+                - height
+              properties:
+                x:
+                  type: integer
+                  minimum: 1
+                  maximum: 50000
+                  x-oapi-codegen-extra-tags:
+                    validate: "required,min=1,max=50000"
+                  example: 10
+                y:
+                  type: integer
+                  minimum: 1
+                  maximum: 50000
+                  x-oapi-codegen-extra-tags:
+                    validate: "required,min=1,max=50000"
+                  example: 5
+                height:
+                  type: integer
+                  minimum: 1
+                  maximum: 30
+                  x-oapi-codegen-extra-tags:
+                    validate: "required,min=1,max=30"
+                  example: 2
+      responses:
+        '201':
+          description: Tree created successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - id
+                properties:
+                  id:
+                    type: string
+                    format: uuid
+                    example: 123e4567-e89b-12d3-a456-426614174000
+        '404':
+          description: Estate not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Estate not found
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Invalid input
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: Oops, something wrong with the server. Please try again later
 components:
   schemas:
     HelloResponse:
